# vis-transfer

./: .gitattributes  .gitignore  README.md
recv/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  precise_reader.py  pyzbar_patch.py  recv.py  requirements.txt  vcpkg.json
recv/cmake/: warnings.cmake
recv/scripts/: build.sh  install.sh
recv/scripts/cmake/: bundled-vcpkg.cmake  warnings.cmake
recv/src/: base.hpp  ddm.hpp  dqr.hpp  header.hpp  main.cpp  memfile.hpp  queue.hpp  repr.hpp  util.hpp  videostream.hpp  xzing.hpp
send/: README.md  pyproject.toml  requirements.txt  send.py
send/send/: __main__.py  interface.py
send/src/vis_transfer/: __main__.py  constants.py  core.py  testing.py
tests/: test_main.py  test_roundtrip.py
tests/data/roundtrip/: text-10K.txt
